adding filters + minor fixes